--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,26 +130,14 @@
                 android:id="@+id/home_Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15px"
-                android:layout_marginLeft="15px"
-                android:layout_marginRight="15px"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="#F9ED69"
-                android:scaleType="centerInside"
+                style="@style/MyImageButtonStyle"
                 app:srcCompat="@drawable/homebutton"/>
 
             <ImageButton
                 android:id="@+id/attendance_Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15px"
-                android:layout_marginLeft="15px"
-                android:layout_marginRight="15px"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:background="#F9ED69"
+                style="@style/MyImageButtonStyle"
                 app:srcCompat="@drawable/attendancebutton"/>
 
             <ImageView
@@ -168,26 +156,14 @@
                 android:id="@+id/register_Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15px"
-                android:layout_marginLeft="15px"
-                android:layout_marginRight="15px"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:background="#F9ED69"
+                style="@style/MyImageButtonStyle"
                 app:srcCompat="@drawable/registerbutton" />
 
             <ImageButton
                 android:id="@+id/generate_Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15px"
-                android:layout_marginLeft="15px"
-                android:layout_marginRight="15px"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:background="#F9ED69"
+                style="@style/MyImageButtonStyle"
                 app:srcCompat="@drawable/generatebutton" />
 
         </LinearLayout>
