--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context=".MainActivity"
+    tools:context=".SchoolAdmin"
     android:orientation="vertical">
 
     <!--Header-->
@@ -46,7 +46,7 @@
             android:id="@+id/prompt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome Admin"
+            android:text="Welcome School Admin"
             android:textColor="#6A2C70"
             android:textSize="20sp"/>
 
@@ -111,8 +111,7 @@
                             android:id="@+id/month_Spinner"
                             android:layout_width="0dp"
                             android:layout_weight="0.5"
-                            android:layout_height="30sp"
-                            android:layout_margin="10px"/>
+                            android:layout_height="30sp"/>
 
                         <View
                             android:id="@+id/divider3"
@@ -176,7 +175,8 @@
             android:id="@+id/submitEmployee_Button"
             android:layout_margin="10px"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
             android:text="Submit Employee"
