--- a/app/src/main/res/layout/activity_system_admin.xml
+++ b/app/src/main/res/layout/activity_system_admin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context=".MainActivity"
+    tools:context=".SystemAdmin"
     android:orientation="vertical">
 
     <!--Header-->
@@ -46,7 +46,7 @@
             android:id="@+id/prompt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome Admin"
+            android:text="Welcome System Admin"
             android:textColor="#6A2C70"
             android:textSize="20sp"/>
 
@@ -295,7 +295,8 @@
             android:id="@+id/submitSchool_Button"
             android:layout_margin="10px"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
             android:text="Submit School"
@@ -304,7 +305,8 @@
             android:id="@+id/submitEmployee_Button"
             android:layout_margin="10px"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
             android:text="Submit Employee"
