--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -82,7 +82,7 @@
                 android:layout_marginBottom="30px"
                 android:adjustViewBounds="true"
                 android:background="@color/zxing_transparent"
-                android:scaleType="centerInside"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/scanqrbutton" />
         </LinearLayout>
     </LinearLayout>
