Image Button Changed

--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -187,50 +187,50 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/buttonGuide_TextView1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15px"
                 android:layout_weight="0.2"
+                android:layout_margin="15px"
                 android:text="Home"
                 android:textAlignment="center"
                 android:textColor="#F9ED69"
                 android:textSize="10sp" />
             <TextView
                 android:id="@+id/buttonGuide_TextView2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15px"
                 android:layout_weight="0.2"
+                android:layout_margin="15px"
                 android:text="QR"
                 android:textAlignment="center"
                 android:textColor="#F9ED69"
                 android:textSize="10sp" />
             <TextView
                 android:id="@+id/buttonGuide_TextView3"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15px"
                 android:layout_weight="0.2"
-                android:text=""
+                android:layout_margin="15px"
+                android:text=" "
                 android:textAlignment="center"
                 android:textColor="#F9ED69"
                 android:textSize="10sp" />
             <TextView
                 android:id="@+id/buttonGuide_TextView4"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15px"
                 android:layout_weight="0.2"
+                android:layout_margin="15px"
                 android:text="DTR"
                 android:textAlignment="center"
                 android:textColor="#F9ED69"
                 android:textSize="10sp" />
             <TextView
                 android:id="@+id/buttonGuide_TextView5"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="15px"
                 android:layout_weight="0.2"
+                android:layout_margin="15px"
                 android:text="TAMS"
                 android:textAlignment="center"
                 android:textColor="#F9ED69"
