--- a/app/src/main/res/drawable/hamburger.xml
+++ b/app/src/main/res/drawable/hamburger.xml
@@ -1,5 +1,7 @@
-<vector android:height="24dp" android:tint="#000000"
+<vector android:height="24dp" android:tint="#F9ED69"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M2,15.5v2h20v-2L2,15.5zM2,10.5v2h20v-2L2,10.5zM2,5.5v2h20v-2L2,5.5z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M3,3h18v2h-18z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M3,19h18v2h-18z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M3,11h18v2h-18z"/>
 </vector>
