--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -27,6 +27,15 @@
 
         <include layout="@layout/header_layout"/>
 
+        <ImageButton
+            android:id="@+id/hamburger_ImageButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.25"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            android:src="@drawable/hamburger"/>
+
     </LinearLayout>
 
     <!--Body-->
