--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -33,6 +33,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.25"
             android:background="#00000000"
+            android:scaleType="fitCenter"
             android:src="@drawable/hamburger"/>
 
     </LinearLayout>
