--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,36 +17,15 @@
         android:background="#B83B5E"
         android:orientation="horizontal">
 
-        <FrameLayout
+        <ImageButton
+            android:id="@+id/backButton_ImageButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.25">
+            android:layout_weight="0.25"
+            android:background="#B83B5E"
+            app:srcCompat="?attr/actionModeCloseDrawable" />
 
-            <ImageView
-                android:id="@+id/headerLogo_ImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/campus_connect_logo" />
-
-            <AnalogClock
-                android:id="@+id/analog_clock"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </FrameLayout>
-
-
-
-        <TextView
-            android:id="@+id/headerText_TextView"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="0.75"
-            android:gravity="center"
-            android:text="Attendance Monitoring App"
-            android:textColor="#F9ED69"
-            android:textSize="20sp" />
+        <include layout="@layout/header_layout"/>
 
     </LinearLayout>
 
@@ -79,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-smallcaps"
-            android:text="Campus Connect"
+            android:text="School Name Here"
             android:textAlignment="center"
             android:textColor="#6A2C70"
             android:textSize="40sp"
